--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,7 @@ playground/data/eval/*
 logs/*
 !logs/.gitkeep
 log_ft.txt
+
+scripts/finetune_lora_custom_oy.sh
+scripts/finetune_lora_custom_new.sh
+scripts/finetune_lora_oy.sh
