fix bugs of merge and tmp

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,7 @@ playground/data/eval/*
 
 logs/*
 !logs/.gitkeep
+scripts/eval/aok_qwen.sh
+scripts/finetune_lora_custom_oy.sh
+tmp/*
+!tmp/.gitkeep
